Started to add the login stuff for the webpage

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -6,12 +6,22 @@ and open the template in the editor.
 -->
 <html>
     <head>
-        <title>TODO supply a title</title>
+        <link rel="stylesheet" href="newcss.css" type="text/css"/>
+  
+
+
+        <title>Term Project</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
     </head>
     <body>
-        <div>TODO write content</div>
-        <a href="game.html"><p>Game is here!</p></a>
+        <div>
+            <form action="login" method="post">
+                <p>Please Login in</p><br>
+                <p>Username: <input type="text" name="username"></p><br>
+                <p>Password: <input type="password" name="pass"></p><br>
+                <a class="button" href="game.html">Submit</a>
+            </form>       
+        </div>
     </body>
 </html>
