Changing HTML to XHTML.

--- a/src/main/webapp/index.xhtml
+++ b/src/main/webapp/index.xhtml
@@ -11,7 +11,7 @@
             <p>Username: <h:inputText value="#{login.username}" /></p>
             <p>Password: <h:inputSecret value="#{login.password}" /></p>
             <h:commandButton value="Login" action="#{login.login()}" />
-            <h:commandButton value="Return" action="game.html" />
+            <h:commandButton value="Return" action="game.xhtml" />
         </h:form>
     </h:body>
 </html>
