--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -4,13 +4,11 @@ To change this license header, choose License Headers in Project Properties.
 To change this template file, choose Tools | Templates
 and open the template in the editor.
 -->
-<?PHP
-    header('Location: index.xhtml');
-?>
 <html>
     <head>
         <title>TODO supply a title</title>
         <meta charset="UTF-8">
+        <meta http-equiv="refresh" content="0"; url="http://roguelikegame2-serria71.rhcloud.com/index.xhtml" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
     </head>
     <body>
