--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -8,7 +8,9 @@ and open the template in the editor.
     <head>
         <title>TODO supply a title</title>
         <meta charset="UTF-8">
-        <meta http-equiv="refresh" content="0"; url="http://roguelikegame2-serria71.rhcloud.com/index.xhtml" />
+        <script>
+            window.location.replace("http://roguelikegame2-serria71.rhcloud.com/index.xhtml");
+        </script>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
     </head>
     <body>
