--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -9,7 +9,7 @@ and open the template in the editor.
         <title>TODO supply a title</title>
         <meta charset="UTF-8">
         <script>
-            window.location.replace("http://roguelikegame2-serria71.rhcloud.com/index.xhtml");
+            window.location.replace("http://roguelikegame2-serria71.rhcloud.com/login.xhtml");
         </script>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
     </head>
