--- a/src/main/webapp/game.xhtml
+++ b/src/main/webapp/game.xhtml
@@ -5,7 +5,7 @@
       xmlns:c="http://xmlns.jcp.org/jsp/jstl/core">
     <head>
         <title>Game Test</title>
-        <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+        <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"></meta>
         <link rel="stylesheet" href="newcss.css" type="text/css"/>
     </head>
     <body>
