--- a/src/main/webapp/create.xhtml
+++ b/src/main/webapp/create.xhtml
@@ -3,14 +3,16 @@
 <html xmlns="http://www.w3.org/1999/xhtml"
       xmlns:h="http://xmlns.jcp.org/jsf/html">
     <h:head>
-        <title>Login</title>
+        <title>Sign Up</title>
         <link rel='stylesheet' href='css.css'></link>
     </h:head>
     <h:body>
         <h:form>
-            <p>Username: <h:inputText value="#{login.username}" /></p>
-            <p>Password: <h:inputSecret value="#{login.password}" /></p>
-            <h:commandButton value="Login" action="#{login.create()}" />
+            <p>Register Username: <h:inputText value="#{UserController.username}" /></p>
+            <p>Register Password: <h:inputSecret value="#{login.password}" /></p>
+            <p>Confirm Password: <h:inputSecret value="#{login.confirmPassword}" /></p>
+            <h:commandButton value="Sign Up" action="#{UserController.addUser()}" />
+            <h:commandButton value="Return" action="index" />
         </h:form>
     </h:body>
 </html>
