--- a/src/main/webapp/login.xhtml
+++ b/src/main/webapp/login.xhtml
@@ -12,5 +12,6 @@
             <p>Password: <h:inputSecret value="#{login.password}" /></p>
             <h:commandButton value="Login" action="#{login.login()}" />
         </h:form>
+        <p>Don't have an account? <a href="create.xhtml">Create one here!</a></p>
     </h:body>
 </html>
