--- a/src/main/webapp/create.xhtml
+++ b/src/main/webapp/create.xhtml
@@ -8,10 +8,10 @@
     </h:head>
     <h:body>
         <h:form>
-            <p>Register Username: <h:inputText value="#{UserController.username}" /></p>
+            <p>Register Username: <h:inputText value="#{login.username}" /></p>
             <p>Register Password: <h:inputSecret value="#{login.password}" /></p>
             <p>Confirm Password: <h:inputSecret value="#{login.confirmPassword}" /></p>
-            <h:commandButton value="Sign Up" action="#{UserController.addUser()}" />
+            <h:commandButton value="Sign Up" action="#{login.create()}" />
             <h:commandButton value="Return" action="index" />
         </h:form>
     </h:body>
