--- a/src/main/webapp/login.xhtml
+++ b/src/main/webapp/login.xhtml
@@ -4,7 +4,7 @@
       xmlns:h="http://xmlns.jcp.org/jsf/html">
     <h:head>
         <title>Login</title>
-        <link rel='stylesheet' href='css.css'></link>
+        <link rel='stylesheet' href='newcss.css'></link>
     </h:head>
     <h:body>
         <section>
