--- a/src/main/webapp/login.xhtml
+++ b/src/main/webapp/login.xhtml
@@ -4,11 +4,11 @@
       xmlns:h="http://xmlns.jcp.org/jsf/html">
     <h:head>
         <title>Login</title>
-        <link rel='stylesheet' href='css.css'></link>
+        <link rel='stylesheet' href='newcss.css'></link>
     </h:head>
     <h:body>
         <section>
-            <h1>Welcome to our Rouge like Fantasy Game. Please stay awhile</h1>
+            <h1>Welcome to our Rogue like Fantasy Game. Please stay awhile</h1>
                 <h:form>
                     <p>Username: <h:inputText value="#{login.username}" /></p>
                     <p>Password: <h:inputSecret value="#{login.password}" /></p>
