--- a/src/main/webapp/create.xhtml
+++ b/src/main/webapp/create.xhtml
@@ -4,14 +4,14 @@
       xmlns:h="http://xmlns.jcp.org/jsf/html">
     <h:head>
         <title>Sign Up</title>
-        <link rel='stylesheet' href='css.css'></link>
+        <link rel='stylesheet' href='newcss.css'></link>
     </h:head>
     <h:body>
         <h:form>
             <p>Register Username: <h:inputText value="#{login.username}" /></p>
             <p>Register Password: <h:inputSecret value="#{login.password}" /></p>
             <h:commandButton value="Sign Up" action="#{login.create()}" />
-            <h:commandButton value="Return" action="index" />
         </h:form>
+        <p><a href="login.xhtml">Want to Return to the Main page well here you go.</a></p>
     </h:body>
 </html>
