added the CSS stuffs

--- a/src/main/webapp/create.xhtml
+++ b/src/main/webapp/create.xhtml
@@ -12,7 +12,7 @@
                 <h:form>
                     <p>Register Username: <h:inputText value="#{login.username}" /></p>
                     <p>Register Password: <h:inputSecret value="#{login.password}" /></p>
-                    <h:commandButton value="Sign Up" action="#{login.create()}"></h:commandButton>
+                    <h:commandButton class="button" value="Sign Up" action="#{login.create()}"></h:commandButton>
                     <h:commandButton value="Return" action="login.xhtml"></h:commandButton>
                 </h:form>
             </div>
