--- a/src/main/webapp/create.xhtml
+++ b/src/main/webapp/create.xhtml
@@ -13,7 +13,7 @@
                     <p>Register Username: <h:inputText value="#{login.username}" /></p>
                     <p>Register Password: <h:inputSecret value="#{login.password}" /></p>
                     <h:commandButton class="button" value="Sign Up" action="#{login.create()}"></h:commandButton>
-                    <h:commandButton value="Return" action="login.xhtml"></h:commandButton>
+                    <h:commandButton class="button" value="Return" action="login.xhtml"></h:commandButton>
                 </h:form>
             </div>
         </section>       
