--- a/src/main/webapp/login.xhtml
+++ b/src/main/webapp/login.xhtml
@@ -13,7 +13,7 @@
                     <h:form>
                         <p>Username: <h:inputText value="#{login.username}" /></p>
                         <p>Password: <h:inputSecret value="#{login.password}" /></p>
-                        <h:commandButton value="Login" action="#{login.login()}" />
+                        <h:commandButton class="button" value="Login" action="#{login.login()}" />
                     </h:form>
                 <p>Don't have an account? <a href="create.xhtml">Create one here!</a></p>
             </div>
